# planny

./: .gitignore  Cargo.toml  build.rs  package-lock.json  package.json
src/: appstate.rs  datamodel.rs  db.rs  forecast.rs  forms.rs  hstable.rs  ids.rs  main.rs  render_forecast.rs  svg.rs  topo_queue.rs  viewmodel.rs
static/css/: styles.css
static/js/: hyperscript-0.9.12.js
tailwind/: base.css  gen-tailwind  tailwind.config.js
templates/: index.html.tera  layout.html.tera  project.html.tera
templates/partials/: forecast.html.tera  people.html.tera  task-grid.html.tera
