[package]
name = "planny"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
native_db = "0.5.1"
native_model = "0.4.6"
parking_lot = "0.12.1"
rand = "0.8.5"
rocket = { version = "0.5.0", features = ["secrets"] }
rocket_dyn_templates = { version = "^0.1.0", features = ["tera"] }
serde = { version = "^1.0", features = ["derive"] }
sqids = "0.3.1"
