[package]
name = "planny"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
human-sort = "0.2.2"
itertools = "0.12.0"
petgraph = "0.6.4"
quantogram = "0.4.4"
rand = "0.8.5"
rand_distr = "0.4.3"
rocket = { version = "0.5.0", features = ["secrets"] }
rocket_dyn_templates = { version = "^0.1.0", features = ["tera"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.108"
sorted-vec = "0.8.3"
sqids = "0.3.1"
